--- a/src/styles/Autorize/Autorize.css
+++ b/src/styles/Autorize/Autorize.css
@@ -90,4 +90,4 @@
   color: white;
   font-family: "Courier New", Courier, monospace;
   font-weight: 800;
-}/*# sourceMappingURL=Autorize.css.map */
+}
