--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 @import url(/src/styles/Autorize/Autorize.css);
 @import url(/src/styles/showForm/showForm.css);
 @import url(/src/styles/UserProfile/UserProfile.css);
+@import url(/src/styles/Registration/Registration.css);
 
 
 :root {
