--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -100,7 +100,7 @@ body {
   caret-color: #9c108e;
   caret-shape: underscore;
   width: 25dvw; 
-  margin: 30px;
+  margin: 15px;
   height: 60px;
   border-radius: 15px;
   border: none;
@@ -152,7 +152,7 @@ body {
   &::before, &::after {
     content: '';
     position: absolute;
-    top: 0.4px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
