--- a/src/styles/UserProfile/UserProfile.css
+++ b/src/styles/UserProfile/UserProfile.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 20px;
   gap: 10px;
   background: var(--main-input-bg);
@@ -31,10 +31,12 @@
   z-index: -1;
 }
 .profile-container .user-shower label {
+  width: 60%;
   color: white;
   font-family: "Courier New", Courier, monospace;
   font-weight: 600;
   font-size: large;
+  text-align: center;
 }
 .profile-container .user-shower .arrow-element {
   border-radius: 50%;
