--- a/src/styles/UserProfile/UserProfile.scss
+++ b/src/styles/UserProfile/UserProfile.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content:space-between ;
+        justify-content:space-around ;
         padding: 20px;
         gap: 10px;
         background: var(--main-input-bg);
@@ -32,10 +32,12 @@
         }
 
         label {
+            width: 60%;
             color: white;
             font-family: 'Courier New', Courier, monospace;
             font-weight:600 ;
             font-size: large;
+            text-align: center;
         }
 
         .arrow-element {
