--- a/src/styles/Components/ThemeSwitcher/_switcher.scss
+++ b/src/styles/Components/ThemeSwitcher/_switcher.scss
@@ -1,4 +1,5 @@
-.switcher {position: relative;
+.switcher {
+  position: relative;
     display: flex;
     width: 90px;
     height: 40px;
@@ -7,6 +8,7 @@
     justify-content: space-evenly;
     transition: .7s;
     z-index: 1;
+
     &::after, &::before {
       content: '';
       z-index: -1;
