--- a/src/styles/Components/UserProfile/_userProfile.scss
+++ b/src/styles/Components/UserProfile/_userProfile.scss
@@ -15,7 +15,7 @@
         justify-content:space-around ;
         padding: 20px;
         gap: 10px;
-        background: var(--main-input-bg);
+        background: white;
         border-radius: 20px;
         overflow: hidden;
         
@@ -27,7 +27,7 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(45deg, #ff0000, #0000ff);
-            filter: blur(20px);
+            filter: blur(15px);
             z-index: -1;
         }
 
@@ -76,7 +76,7 @@
         transition: transform .3s;
 
         button {
-            background: var(--main-input-bg);
+            background: white;
             border: none;
             outline: none;
             border-radius: 12px;
