--- a/src/styles/Base/_root.scss
+++ b/src/styles/Base/_root.scss
@@ -4,8 +4,6 @@
 
 
 :root {
-  --main-width: 250px;
-  --main-height: 290px;
   --top-menu-height: 60px;
   --is-theme-dark: 0;
   --is-theme-light: 1;
@@ -17,19 +15,23 @@
   
   --backdrop-light: linear-gradient(235deg, var(--bg-color-light-1), var(--bg-color-light-2));
   --backdrop-dark: linear-gradient(235deg, var(--bg-color-dark-1), var(--bg-color-dark-2) );
-  --button-color-1: #4305ed;
-  --button-color-2: #9c108e;
-  --placeholder-color: gray;
+
+  --button-color-dark-1: #4400ff;
+  --button-color-dark-2: #ff00e6;
+  --button-color-light-1: #4ecdc4;
+  --button-color-light-2: orange;
+
+  --button-background: linear-gradient(90deg, var(--button-color-light-2), var(--button-color-light-1));
+  --button-hover-ground: linear-gradient(90deg, var(--button-color-dark-2), var(--button-color-dark-1));
 
 }
 
 .theme-dark {
-  --button-color-1: #4ecdc4;
-  --button-color-2: orange;
-  --input-shadow-color: #5b444c;
-  --input-shadow-width: 50px ;
   --is-theme-dark: 1;
   --is-theme-light: 0;
+
+  --button-background: linear-gradient(90deg, var(--button-color-dark-2), var(--button-color-dark-1));
+  --button-hover-ground: linear-gradient(90deg, var(--button-color-light-1), var(--button-color-light-2));
 }
 
 *{  
