--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,6 +34,15 @@
   box-sizing: border-box;
 }
 
+html {
+  background: fixed;
+  position: fixed;
+}
+
+#root {
+  height: 100%;
+}
+
 #main-nav {
   display: flex;
   align-items: center;
@@ -132,7 +141,7 @@ body::after {
   z-index: -1;
   border-radius: 20px;
   transition: 0.4s;
-  filter: blur(5px);
+  filter: blur(3px);
 }
 .main_button::before {
   background: var(--button-background);
@@ -179,13 +188,8 @@ aside {
   margin-left: 10px;
 }
 
-html {
-  background: fixed;
-  position: fixed;
-}
-
-#root {
-  height: 100%;
+.main_radio {
+  scale: 1.5;
 }
 
 .auth-container {
@@ -350,11 +354,18 @@ html {
   height: 100dvh;
   flex-direction: column;
 }
-.registration-container h2 {
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: xx-large;
-  font-weight: 600;
+.registration-container dialog[open] {
+  justify-self: center;
+  align-self: center;
+  margin: auto;
+  opacity: 1;
+  border: none;
+  background: none;
+  color: black;
+}
+.registration-container dialog::backdrop {
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 .registration-container #registration-form {
   display: flex;
@@ -362,15 +373,56 @@ html {
   height: auto;
   align-items: center;
 }
-.registration-container #registration-form .input:nth-last-child(2), .registration-container #registration-form :nth-last-child(3) {
+.registration-container #registration-form > .input {
+  text-overflow: ellipsis;
+}
+.registration-container #registration-form legend {
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: xx-large;
+  font-weight: 600;
+}
+.registration-container #registration-form > .input:nth-last-child(2), .registration-container #registration-form > :nth-last-child(3) {
   height: 40px;
   margin: 10px 0;
 }
-.registration-container #registration-form .input:nth-last-child(2)::-moz-placeholder, .registration-container #registration-form :nth-last-child(3)::-moz-placeholder {
+.registration-container #registration-form > .input:nth-last-child(2)::-moz-placeholder, .registration-container #registration-form > :nth-last-child(3)::-moz-placeholder {
   font-size: large;
 }
-.registration-container #registration-form .input:nth-last-child(2)::placeholder, .registration-container #registration-form :nth-last-child(3)::placeholder {
+.registration-container #registration-form > .input:nth-last-child(2)::placeholder, .registration-container #registration-form > :nth-last-child(3)::placeholder {
   font-size: large;
+}
+.registration-container #registration-form fieldset {
+  display: flex;
+  align-items: center;
+  background: white;
+  width: 90%;
+  border: none;
+  border-radius: 10px;
+  justify-content: center;
+}
+.registration-container #registration-form fieldset legend {
+  color: wheat;
+  width: 154px;
+  height: 20px;
+  font-size: large;
+  position: relative;
+  top: -10px;
+}
+.registration-container #registration-form fieldset div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 70%;
+  position: relative;
+  top: -5px;
+}
+.registration-container #registration-form fieldset div input {
+  height: 40px;
+}
+.registration-container #registration-form fieldset div label {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 600;
 }
 .registration-container #registration-form button {
   margin-top: 8%;
