--- a/src/styles/Base/_base.scss
+++ b/src/styles/Base/_base.scss
@@ -50,6 +50,19 @@ body {
   box-sizing: border-box;
   transition: all .7s;
   transition: box-shadow 0.3s, transform 0.5s;
+  
+  & + label.valid_message {
+    display: none;
+  }
+
+  &.invalid {
+    border: red solid;
+
+    & + label.valid_message {
+      display: block;
+      animation: shake 0.5s
+    }
+  }
 
   &::placeholder {
     color: gray ;
@@ -140,4 +153,12 @@ aside {
   scale: 1.5;
 }
 
+label.valid_message { 
+  color: red;
+}
 
+@keyframes shake {
+  0%, 100% { transform: translateX(0); }
+  20%, 60% { transform: translateX(-5px); }
+  40%, 80% { transform: translateX(5px); }
+}
