Complete Registration Page

--- a/src/styles/Base/_base.scss
+++ b/src/styles/Base/_base.scss
@@ -62,7 +62,7 @@ body {
 
   &.invalid + label {
     visibility:visible;
-    animation: shake .5s;
+    animation: shake .5s ;
     color: red;
   }
   
@@ -153,6 +153,7 @@ aside {
   }
 
   & > svg {
+    color: var(--main-color);
     align-self: center;
     justify-self: center;
     margin-left: 10px;
