--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -400,6 +400,10 @@ aside > svg:hover {
   border: none;
   background: none;
   color: black;
+  outline: none;
+}
+.registration-container dialog.SuccessfulModal[open] * {
+  outline: none;
 }
 .registration-container dialog.SuccessfulModal[open] p {
   font-size: x-large;
@@ -408,17 +412,30 @@ aside > svg:hover {
   font-weight: 600;
   text-align: center;
   margin-bottom: 10px;
+  animation: show 0.6s;
 }
 .registration-container dialog.SuccessfulModal[open] button {
   width: 100%;
+  opacity: 0;
+  animation: show 0.6s forwards;
+  animation-delay: 0.1s;
 }
 .registration-container dialog.SuccessfulModal[open] button:hover {
   transform: scale(1);
+}
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 .registration-container dialog.WaitModal[open] {
   justify-self: center;
   align-self: center;
   opacity: 1;
+  outline: 0;
   border: none;
   background: none;
   color: black;
@@ -481,6 +498,9 @@ aside > svg:hover {
   height: -moz-min-content;
   height: min-content;
   align-items: center;
+}
+.registration-container #registration-form > legend {
+  margin-bottom: 10px;
 }
 .registration-container #registration-form > .input {
   text-overflow: ellipsis;
