--- a/src/styles/Components/Registration/_registration.sass
+++ b/src/styles/Components/Registration/_registration.sass
@@ -12,12 +12,15 @@
     dialog.SuccessfulModal[open]
         justify-self: center
         align-self: center
+        justify-items: center
+        align-items: center
         margin: auto
         opacity: 1
         border: none
         background: none
         color: black
         outline: none
+        width: 300px
 
         *
             outline: none
@@ -33,8 +36,9 @@
         
         button
             &:hover
-                transform: scale(1)
-            width: 100%    
+                &, &::before, &::after
+                    transform: scale(1) 
+            width: 250px
             opacity: 0
             animation: show .6s  forwards
             animation-delay: .1s
@@ -102,7 +106,6 @@
             
             @keyframes rotate 
                 from
-                
 
                 to 
                     rotate: 360deg
@@ -111,6 +114,7 @@
         backdrop-filter: blur(5px)
 
     #registration-form 
+        width: 90dvw
         display: flex
         flex-direction: column
         height: min-content
@@ -122,6 +126,10 @@
 
         & > .input
             text-overflow: ellipsis
+        
+        & > .input[name=password], & > .input[name=repeat]
+            width: pxw(400) 
+            height: 40px
 
         legend        
             color: white
@@ -134,7 +142,8 @@
             display: flex
             align-items: center 
             background: white
-            width: 90%
+            width: 25dvw
+            width: pxw(450)
             margin-bottom: 20px
             margin-top: 5px
             border: none
@@ -168,6 +177,6 @@
 
 
         button 
-            margin-top: 8%
+            margin-top: 30px
             width:280px
 
