--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -395,12 +395,15 @@ aside > svg:hover {
 .registration-container dialog.SuccessfulModal[open] {
   justify-self: center;
   align-self: center;
+  justify-items: center;
+  align-items: center;
   margin: auto;
   opacity: 1;
   border: none;
   background: none;
   color: black;
   outline: none;
+  width: 300px;
 }
 .registration-container dialog.SuccessfulModal[open] * {
   outline: none;
@@ -415,12 +418,12 @@ aside > svg:hover {
   animation: show 0.6s;
 }
 .registration-container dialog.SuccessfulModal[open] button {
-  width: 100%;
+  width: 250px;
   opacity: 0;
   animation: show 0.6s forwards;
   animation-delay: 0.1s;
 }
-.registration-container dialog.SuccessfulModal[open] button:hover {
+.registration-container dialog.SuccessfulModal[open] button:hover, .registration-container dialog.SuccessfulModal[open] button:hover::before, .registration-container dialog.SuccessfulModal[open] button:hover::after {
   transform: scale(1);
 }
 @keyframes show {
@@ -493,6 +496,7 @@ aside > svg:hover {
           backdrop-filter: blur(5px);
 }
 .registration-container #registration-form {
+  width: 90dvw;
   display: flex;
   flex-direction: column;
   height: -moz-min-content;
@@ -505,6 +509,10 @@ aside > svg:hover {
 .registration-container #registration-form > .input {
   text-overflow: ellipsis;
 }
+.registration-container #registration-form > .input[name=password], .registration-container #registration-form > .input[name=repeat] {
+  width: 20.8333333333dvw;
+  height: 40px;
+}
 .registration-container #registration-form legend {
   color: white;
   font-family: "Courier New", Courier, monospace;
@@ -515,7 +523,8 @@ aside > svg:hover {
   display: flex;
   align-items: center;
   background: white;
-  width: 90%;
+  width: 25dvw;
+  width: 23.4375dvw;
   margin-bottom: 20px;
   margin-top: 5px;
   border: none;
@@ -546,7 +555,7 @@ aside > svg:hover {
   font-weight: 600;
 }
 .registration-container #registration-form button {
-  margin-top: 8%;
+  margin-top: 30px;
   width: 280px;
 }
 
