update base styles

--- a/src/styles/Base/_root.scss
+++ b/src/styles/Base/_root.scss
@@ -1,38 +1,55 @@
 /* """ main css file """ */
 @use './_mixins' as *;
 
+@property --bg-color-start {
+syntax: '<color>';
+inherits: true;
+initial-value: #2e9aff;
+}
 
+@property --bg-color-stop {
+syntax: '<color>';
+inherits: true;
+initial-value: #f498ad;
+}
+
+@property --button-color-start {
+  syntax: '<color>';
+  inherits: true;
+  initial-value: orange;
+}
+
+@property --button-color-stop {
+  syntax: '<color>';
+  inherits: true;
+  initial-value: #4ecdc4;
+}
+
+@property --button-hover-start {
+  syntax: '<color>';
+  inherits: true;
+  initial-value: #ff00e6;
+}
+
+@property --button-hover-stop {
+  syntax: '<color>';
+  inherits: true;
+  initial-value: #4400ff;
+}
 
 :root {
   --top-menu-height: 60px;
-  --is-theme-dark: 0;
-  --is-theme-light: 1;
-  
-  --bg-color-light-1: #2e9aff;
-  --bg-color-light-2: #f498ad;
-  --bg-color-dark-1: rgb(41, 32, 112);
-  --bg-color-dark-2: black;
-  
-  --backdrop-light: linear-gradient(235deg, var(--bg-color-light-1), var(--bg-color-light-2));
-  --backdrop-dark: linear-gradient(235deg, var(--bg-color-dark-1), var(--bg-color-dark-2) );
-
-  --button-color-dark-1: #4400ff;
-  --button-color-dark-2: #ff00e6;
-  --button-color-light-1: #4ecdc4;
-  --button-color-light-2: orange;
-
-  --button-background: linear-gradient(90deg, var(--button-color-light-2), var(--button-color-light-1));
-  --button-hover-ground: linear-gradient(90deg, var(--button-color-dark-2), var(--button-color-dark-1));
   --main-color: black;
 }
 
 .theme-dark {
-  --is-theme-dark: 1;
-  --is-theme-light: 0;
-
-  --button-background: linear-gradient(90deg, var(--button-color-dark-2), var(--button-color-dark-1));
-  --button-hover-ground: linear-gradient(90deg, var(--button-color-light-1), var(--button-color-light-2));
-  --main-color:white;
+  --bg-color-start: rgb(41, 32, 112);
+  --bg-color-stop:black;  
+  --button-color-start: #ff00e6;
+  --button-color-stop: #4400ff;
+  --button-hover-start: #ffa500;
+  --button-hover-stop: #4ecdc4;
+  --main-color: #b41fff;
 }
 
 *{  
