--- a/src/styles/Components/Registration/_registration.sass
+++ b/src/styles/Components/Registration/_registration.sass
@@ -117,7 +117,7 @@
         width: 90dvw
         display: flex
         flex-direction: column
-        height: min-content
+        height: 600px
         align-items: center
 
         & > legend 
