--- a/src/styles/Base/_base.scss
+++ b/src/styles/Base/_base.scss
@@ -9,7 +9,7 @@
   position: relative;
   top: 0;
   left: 0;  
-}
+} 
 
 a {
   text-decoration: none;
@@ -20,28 +20,23 @@ a {
 body {
   width: 100dvw;
   height: 100dvh;
-  &::after,&::before {
-    @include pseudoelement;
-    z-index: -1;
-    transition: opacity .4s;
-    ;
-  }
-  &::before {
-    opacity: var(--is-theme-dark);
-    background-image: var(--backdrop-dark);
-  }
-  &::after {
-    opacity: var(--is-theme-light) ;
-    background-image: var(--backdrop-light) ;
-  }
+  background-image: linear-gradient(
+    235deg, 
+    var(--bg-color-start),
+    var(--bg-color-stop)
+  );
+  transition: 
+      --bg-color-start .4s,
+      --bg-color-stop .4s;
 
 }
-.input {
+
+.main_input {
   caret-color: #9c108e;
   @include size;
-  // margin: 15px;
-  border-radius: 15px;
-  border: none;
+  border-radius: 10px;
+  border: 2px gray solid;
+  height: 50px;
   font-family: 'Courier New', Courier, monospace;
   font-size: x-large;
   font-weight: 550;
@@ -63,12 +58,12 @@ body {
   &.invalid + label {
     visibility:visible;
     animation: shake .5s ;
-    color: red;
+    color: red; 
   }
   
 
   &:invalid, &.invalid {
-    border: red solid;
+    border: 2px red solid;
   }
 
   &::placeholder {
@@ -86,6 +81,53 @@ body {
   }
 }
 
+.pretty_input {
+  caret-color: #9c108e;
+  @include size;
+  border-radius: 10px;
+  border: 2px gray solid;
+  height: 50px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: x-large;
+  font-weight: 550;
+  padding: 20px;
+  box-sizing: border-box;
+  transition: all .7s;
+  position: relative;
+  transition: box-shadow 0.3s, transform 0.3s;
+
+  & + label {
+    visibility: hidden;
+    height: 20px;
+    margin-bottom: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 700;
+  }
+
+  &.invalid + label {
+    visibility:visible;
+    animation: shake .5s ;
+    color: red; 
+  }
+  
+
+  &:invalid, &.invalid {
+    border: 2px red solid;
+  }
+
+  &::placeholder {
+    font-size: large;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: gray ;
+  }
+
+  &:focus, &:hover {
+    outline: none;
+    transform: translate(-2px, -2px);
+    box-shadow: 2px 2px 0 var(--main-color);
+  }
+}
+
 .main_button {
   @include size;
   height: 40px;
@@ -96,40 +138,76 @@ body {
   font-family: 'Courier New', Courier, monospace;
   font-size: larger;
   position: relative;
-  background-color: rgba(255, 255, 255, 0.185);
+  // background-color: rgba(255, 255, 255, 0.185);
   transition: all 0.4s ease;
   scale: 1;
 
-  &::before, &::after {
-    @include pseudoelement;
-    border-radius: 20px;
-    transition: .4s;
-    filter: blur(3px);
-  }
-
   &::before {
-    background: var(--button-background);
-    clip-path: view-box;
-    opacity: 1;;
+    @include pseudoelement;
+    background-image: linear-gradient(
+    90deg, 
+    var(--button-color-start), 
+    var(--button-color-stop)
+    );
+    border-radius: 20px;
+    filter: blur(5px);
+    // clip-path: view-box;
   }
 
-  &::after {
-    background: var(--button-hover-ground);
-    opacity: 0;
-  }
+  transition: 
+    scale .4s,
+    --button-color-start .4s,
+    --button-color-stop .4s;
 
   &:hover{
+    scale: 1.05;
+    --button-color-start: var(--button-hover-start);
+    --button-color-stop: var(--button-hover-stop);
+  }
+}
 
-    transform:scale(1.08);
-    border-color: rgba(255, 255, 255, 0);
+.pretty_button{
+  outline: 0;
+  grid-gap: 8px;
+  align-items: center;
+    background-image: linear-gradient(
+    90deg, 
+    var(--button-color-start), 
+    var(--button-color-stop)
+    );
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 8px;
+  border:  solid;
+  cursor: pointer;
+  display: inline-flex;
+  flex-shrink: 0;
+  font-size: 16px;
+  gap: 8px;
+  justify-content: center;
+  line-height: 1.5;
+  overflow: hidden;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition:
+    all .14s,
+    --button-color-start .2s,
+    --button-color-stop .2s;
+  &:hover {
+      box-shadow: 4px 4px 0 #000;
+      transform: translate(-4px,-4px);
+      --button-color-start: var(--button-hover-start);
+    --button-color-stop: var(--button-hover-stop);
+  }
+  &:active {
+      box-shadow: 2px 2px 0 #000;
+      transform: translate(-2px,-2px);
 
-    &::before {
-      opacity: 0;
-    }
-
-    &::after {
-      opacity: 1;
-    }
+  }
+  :focus-visible{
+      outline-offset: 1px;
   }
 }
 
@@ -180,3 +258,5 @@ aside {
   20%, 60% { transform: translateX(-5px); }
   40%, 80% { transform: translateX(5px); }
 }
+
+
