--- a/src/styles/Base/_base.scss
+++ b/src/styles/Base/_base.scss
@@ -119,12 +119,23 @@ body {
     font-size: large;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: gray ;
+    transition: transform .3s;
   }
 
   &:focus, &:hover {
+
+    &::placeholder {
+      transform: translate(10px) scale(1.1);
+    }
+
     outline: none;
     transform: translate(-2px, -2px);
     box-shadow: 2px 2px 0 var(--main-color);
+  }
+  &:invalid {
+    &:focus, &:hover {
+      --main-color: red;
+    }
   }
 }
 
@@ -138,7 +149,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
   font-size: larger;
   position: relative;
-  // background-color: rgba(255, 255, 255, 0.185);
+  background-color: rgba(255, 255, 255, 0.185);
   transition: all 0.4s ease;
   scale: 1;
 
@@ -150,8 +161,8 @@ body {
     var(--button-color-stop)
     );
     border-radius: 20px;
-    filter: blur(5px);
-    // clip-path: view-box;
+    filter: blur(10px);
+    clip-path: view-box;
   }
 
   transition: 
