--- a/src/styles/Components/Registration/_registration.sass
+++ b/src/styles/Components/Registration/_registration.sass
@@ -21,6 +21,7 @@
         color: black
         outline: none
         width: 300px
+        height: 85px
 
         *
             outline: none
@@ -32,6 +33,7 @@
             font-weight: 600
             text-align: center
             margin-bottom: 10px
+            height: 30px
             animation: show .6s  
         
         button
@@ -119,13 +121,15 @@
         flex-direction: column
         height: 600px
         align-items: center
+        position: relative
 
         & > legend 
-            margin-bottom: 10px
+            margin-bottom: 15px
 
 
-        & > .input
+        & > .pretty_input
             text-overflow: ellipsis
+
         
         & > .input[name=password], & > .input[name=repeat]
             width: pxw(400) 
