--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -166,16 +166,28 @@ body {
   font-size: large;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: gray;
+  -moz-transition: transform 0.3s;
+  transition: transform 0.3s;
 }
 .pretty_input::placeholder {
   font-size: large;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: gray;
+  transition: transform 0.3s;
 }
 .pretty_input:focus, .pretty_input:hover {
   outline: none;
   transform: translate(-2px, -2px);
   box-shadow: 2px 2px 0 var(--main-color);
+}
+.pretty_input:focus::-moz-placeholder, .pretty_input:hover::-moz-placeholder {
+  transform: translate(10px) scale(1.1);
+}
+.pretty_input:focus::placeholder, .pretty_input:hover::placeholder {
+  transform: translate(10px) scale(1.1);
+}
+.pretty_input:invalid:focus, .pretty_input:invalid:hover {
+  --main-color: red;
 }
 
 .main_button {
@@ -189,6 +201,7 @@ body {
   font-family: "Courier New", Courier, monospace;
   font-size: larger;
   position: relative;
+  background-color: rgba(255, 255, 255, 0.185);
   transition: all 0.4s ease;
   scale: 1;
   transition: scale 0.4s, --button-color-start 0.4s, --button-color-stop 0.4s;
@@ -205,7 +218,9 @@ body {
   z-index: -1;
   background-image: linear-gradient(90deg, var(--button-color-start), var(--button-color-stop));
   border-radius: 20px;
-  filter: blur(5px);
+  filter: blur(10px);
+  -webkit-clip-path: view-box;
+          clip-path: view-box;
 }
 .main_button:hover {
   scale: 1.05;
@@ -473,6 +488,7 @@ aside > svg:hover {
   color: black;
   outline: none;
   width: 300px;
+  height: 85px;
 }
 .registration-container dialog.SuccessfulModal[open] * {
   outline: none;
@@ -484,6 +500,7 @@ aside > svg:hover {
   font-weight: 600;
   text-align: center;
   margin-bottom: 10px;
+  height: 30px;
   animation: show 0.6s;
 }
 .registration-container dialog.SuccessfulModal[open] button {
@@ -570,11 +587,12 @@ aside > svg:hover {
   flex-direction: column;
   height: 600px;
   align-items: center;
+  position: relative;
 }
 .registration-container #registration-form > legend {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
-.registration-container #registration-form > .input {
+.registration-container #registration-form > .pretty_input {
   text-overflow: ellipsis;
 }
 .registration-container #registration-form > .input[name=password], .registration-container #registration-form > .input[name=repeat] {
